# lcz-studio

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml  spike-sidecar.yml
.visual-test/: catalog.json
desktop/: README.md  package.json
desktop/scripts/: package_dmg.sh
desktop/sidecar/: api.py  build_sidecar.sh  lcz-api.spec  plumber.R  smoke_test_catalog.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ClimateAnalysisPanel.css  ClimateAnalysisPanel.tsx  DataTable.css  DataTable.tsx  FileUpload.css  FileUpload.tsx  HelpCenter.css  HelpCenter.tsx  LCZLegend.css  LCZLegend.tsx  LCZStatistics.css  LCZStatistics.tsx  LayerManager.css  LayerManager.tsx  LayerStyler.css  LayerStyler.tsx  Lcz4pyBrowserPanel.css  Lcz4pyBrowserPanel.tsx  MainWorkspace.css  MainWorkspace.tsx  MapCanvas.css  MapCanvas.tsx  RStatusBar.css  RStatusBar.tsx  Sidebar.css  Sidebar.tsx  Toolbar.css  Toolbar.tsx  toolRegistry.ts
frontend/src/data/: dataImporter.ts  duckdb.ts
frontend/src/i18n/: translations.ts
frontend/src/map/: MapLibreManager.ts  cogHandler.ts
frontend/src/services/: rService.ts
frontend/src/store/: useStore.ts
frontend/src/utils/: functionGuide.ts  lczPalette.ts  project.ts  resultOutputs.ts
