[package]
name = "lcz-studio"
version = "0.1.0"
description = "Local-first desktop GIS for urban-climate / Local Climate Zone analysis"
authors = ["LCZ Studio Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

[lib]
name = "lcz_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
